# fritiofr-ches-gui

./: Cargo.toml
assets/kiwen-suwi/: README.md
src/: animation.rs  chess_controller.rs  chess_renderer.rs  main.rs
